<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingVertical="@dimen/dimen_4"
        android:src="@drawable/ic_arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        style="@style/header_black_191919_18sp_circularstdbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dimen_14"
        android:layout_toEndOf="@id/ivBackImg"
        android:text="@string/user_details" />

    <LinearLayout
        android:id="@+id/LlScreens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            style="@style/et_header_orange_F89858_20sp_circularstdbook" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            style="@style/et_header_light_C4C4C4_20sp_circularstdbook" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            style="@style/et_header_light_C4C4C4_20sp_circularstdbook" />
    </LinearLayout>

</RelativeLayout>