<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_curve_popup"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimen_18"
    android:padding="@dimen/dimen_16">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEnterPin"
        style="@style/set_pin_black_191919_21sp_circularstdbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/do_you_to_set_m_pin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSecureApp"
        style="@style/pin_desc_light_888888_14sp_circularstdbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_32"
        android:text="@string/secure_your_app"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnChangePassword"
            style="@style/bg_change_black_172920_18sp_circularstdbook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:layout_marginEnd="@dimen/dimen_6"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_change_password"
            android:gravity="center"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSave"
            style="@style/btn_login_white_18sp_circularstdbook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:layout_marginStart="@dimen/dimen_6"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_secondary"
            android:gravity="center"
            android:text="@string/set_m_pin" />

    </LinearLayout>

</LinearLayout>