<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_8FBD27"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_20">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_success" />

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/welcome_white_50sp_cera_pro_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:gravity="center"
            android:text="@string/Welcome" />

        <TextView
            style="@style/welcome_white_24sp_cera_pro_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to_a_easier_way_of_catering" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnLogin"
        style="@style/btn_login_131313_black_18sp_cera_pro_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_welcome"
        android:gravity="center"
        android:text="@string/login" />

</RelativeLayout>