<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LlMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/bg_curve_popup"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_56">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-40dp"
            android:background="@drawable/ic_success" />

        <TextView
            android:id="@+id/tvThanku"
            style="@style/thanku_black_131313_30sp_circularstdbook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:gravity="center"
            android:text="@string/thank_you" />

        <TextView
            android:id="@+id/tvVerificationSuccess"
            style="@style/thanku_desc_orange_FF9033_17sp_circularstdbook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:gravity="center"
            android:text="@string/verification_successful" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnLogin"
        style="@style/btn_login_white_18sp_circularstdbook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:layout_below="@+id/LlMain"
        android:layout_marginHorizontal="@dimen/dimen_76"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="@dimen/dimen_20"
        android:background="@drawable/bg_btn_thanku"
        android:gravity="center"
        android:text="@string/login" />

</RelativeLayout>