<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login_top_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_204"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_login_logo" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:layout_marginTop="@dimen/dimen_36"
            android:textColorHint="@color/light_888888"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_6"
            app:boxCornerRadiusBottomStart="@dimen/dimen_6"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6"
            app:boxCornerRadiusTopStart="@dimen/dimen_6"
            app:boxStrokeColor="@color/black_172920">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/et_login_black_172920_16sp_circularstdbook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dimen_8"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:layout_marginTop="@dimen/dimen_22"
            android:textColorHint="@color/light_888888"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_6"
            app:boxCornerRadiusBottomStart="@dimen/dimen_6"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6"
            app:boxCornerRadiusTopStart="@dimen/dimen_6"
            app:boxStrokeColor="@color/black_172920">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/et_login_black_172920_16sp_circularstdbook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dimen_8"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLogin"
            style="@style/btn_login_white_18sp_circularstdbook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@drawable/bg_btn_login"
            android:gravity="center"
            android:text="@string/login" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/tv_login_blue_36A4DD_16sp_circularstdbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/forgot_password" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNewUser"
        style="@style/btn_user_white_18sp_circularstdbook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:layout_marginVertical="@dimen/dimen_20"
        android:background="@drawable/bg_btn_new_user"
        android:drawableEnd="@drawable/ic_arrow_next"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dimen_16"
        android:text="@string/new_user" />

</RelativeLayout>